--- a/gullible-gravity/package.json
+++ b/gullible-gravity/package.json
@@ -1,7 +1,12 @@
 {
   "name": "gullible-gravity",
-  "type": "module",
   "version": "0.0.1",
+  "dependencies": {
+    "@astrojs/check": "^0.8.2",
+    "@directus/sdk": "^16.1.1",
+    "astro": "^4.11.6",
+    "typescript": "^5.5.3"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -9,10 +14,5 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "dependencies": {
-    "@astrojs/check": "^0.8.2",
-    "@directus/sdk": "^16.1.1",
-    "astro": "^4.11.6",
-    "typescript": "^5.5.3"
-  }
+  "type": "module"
 }
